# voco

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  hotkey_listen.py  hud_demo.html  hud_widget.py  keytest.py  keytest_poll.py  main.py  main_window.py  polisher.py  recognize.py  recognizer.py  record.py  setup_wizard.py  stats.py  test_volc.py  tray.py  voice_engine.py
voco-landing/: .gitignore  package.json
voco-landing/app/: globals.css  layout.tsx  page.tsx
voco-landing/app/components/: AppsAnywhere.tsx  EmailForm.tsx  Faq.tsx  FeatureAutoList.tsx  FeatureContext.tsx  FeaturePrivacy.tsx  FeatureTranslate.tsx  HudPreview.tsx  LiveDemo.tsx  Reveal.tsx  SpeedCompare.tsx
voco-landing/app/fonts/: page.tsx
voco-tauri/: .env.example  .gitignore  README.md  hud.html  index.html  package.json  pnpm-lock.yaml  vite.config.ts
voco-tauri/scripts/: RELEASE.md  publish-release.ps1  rebuild_logo.py
voco-tauri/src/: ApiKeyFields.tsx  App.css  App.tsx  SetupWizard.tsx  hud.ts  main.tsx  types.ts
voco-tauri/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
voco-tauri/src-tauri/capabilities/: default.json  hud.json
voco-tauri/src-tauri/icons/: icon.icns
voco-tauri/src-tauri/src/: ai.rs  app_context.rs  audio.rs  audio_ducker.rs  config.rs  dictionary.rs  history_crypt.rs  kbd_layout.rs  lib.rs  main.rs  openai_asr.rs  paste.rs  polling_hotkey.rs  sound.rs  stats.rs  voice_engine.rs  volc_asr.rs
voxo/: 01-recording-pill.html  02-result-popup.html  03-menubar-popup.html  04-main-history.html  05-settings-shortcuts.html  06-settings-voice.html  07-settings-ai.html  08-settings-general.html  09-onboarding.html  DESIGN-NOTES.md  index.html
