[package]
name = "voco-tauri"
version = "0.1.0"
description = "VoCo — voice-to-text input method, subscription-grade Windows desktop app"
authors = ["VoCo"]
edition = "2021"

[lib]
name = "voco_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri core + plugins ---
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
# NOTE: we explicitly DON'T use tauri-plugin-global-shortcut.
# Reasons (see src/polling_hotkey.rs docstring):
#   - Can't register bare Right-Alt as a standalone shortcut (RegisterHotKey limitation).
#   - Korean banking security plugins block keyboard-hook based listeners.
# Instead we poll GetAsyncKeyState at 50 Hz.
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# --- Async runtime ---
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# --- WebSocket (火山 ASR) ---
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# --- HTTP (DeepSeek/OpenAI) ---
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# --- Audio I/O ---
cpal = "0.15"
hound = "3.5"  # WAV writer

# --- Clipboard ---
arboard = "3"

# --- Compression (gzip for 火山 payload) ---
flate2 = "1"

# --- Misc ---
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
once_cell = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tauri-plugin-autostart = "2.5.1"
tracing-appender = "0.2.5"
tauri-plugin-process = "2.3.1"

# --- Windows-specific (clipboard paste via SendInput) ---
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_Security_Cryptography",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
